√ Can we reduce the white space margin around the main content area screen and in between elements?  E.g., Employees > Employee Information;  My Requests; etc... Employees 	√  Can we make the Employees side panel thinner? WorkTime Records 	√ The title header text should be “WorkTime” records (no space between Work and Time) Reports > Night Mode Styling for Calendars 	√ Depts > Overtime Check 	√ Depts > Payroll Summary 	√ Depts > Time Recap 	√ Emp > Timesheet 	√ Msc > Quicklist Reports > Side Panel 	√ Can we make the side panel thinner? Admin > Super Admin 	√ Carry Over Type, the labels are wrong 	√ “Approval” (not Approvial) in Leave Request 	√ Scrolling doesn’t work in Leave Request Admin > User Defined Categories 	√ “Paid” not “Paied” 	√ Scrolling doesn’t work / form field cut off Admin > Holiday Editor 	√ Missing years in drop-down 		√ Get from reports (Misc > Holiday Reconciliation) 		√ Also applied week, day and month options for floating holiday selectors 	√ Missing checkbox under calendar 		√ This was a scrolling issue

--- a/packages/local/breeze-night-material/sass/save.scss
+++ b/packages/local/breeze-night-material/sass/save.scss
@@ -405,6 +405,42 @@ $ui-minicalendar-datepanel-today-cell-color: #ffffff;
 $ui-minicalendar-datepanel-today-cell-font-weight: 700;
 $ui-minicalendar-datepanel-weekend-column-spacing: 0px;
 
+$ui-light-minicalendar-datepanel-tool-color: #ffffff;
+$ui-light-minicalendar-datepanel-body-background-color: #3D5069;
+$ui-light-minicalendar-datepanel-border-width: 1px;
+$ui-light-minicalendar-datepanel-caption-background-color: #2D415A;
+$ui-light-minicalendar-datepanel-caption-color: #ffffff;
+$ui-light-minicalendar-datepanel-caption-font-size: 14pt;
+$ui-light-minicalendar-datepanel-cell-border-radius: 0px 0px 0px 0px;
+$ui-light-minicalendar-datepanel-cell-height: 30pt;
+$ui-light-minicalendar-datepanel-cell-spacing: 0px;
+$ui-light-minicalendar-datepanel-cell-width: 30pt;
+$ui-light-minicalendar-datepanel-date-cell-background-color: #2D415A;
+$ui-light-minicalendar-datepanel-date-cell-border-color: #3D5069;
+$ui-light-minicalendar-datepanel-date-cell-border-style: none;
+$ui-light-minicalendar-datepanel-date-cell-color: #ffffff;
+$ui-light-minicalendar-datepanel-date-cell-font-size: 10pt;
+$ui-light-minicalendar-datepanel-date-cell-font-weight: 600;
+$ui-light-minicalendar-datepanel-day-cell-background-color: #4A5D74;
+$ui-light-minicalendar-datepanel-day-cell-color: #FFFFFF;
+$ui-light-minicalendar-datepanel-day-cell-font-size: 11pt;
+$ui-light-minicalendar-datepanel-day-cell-font-weight: 900;
+$ui-light-minicalendar-datepanel-day-cell-height: 20pt;
+$ui-light-minicalendar-datepanel-focused-cell-outline-style: none;
+$ui-light-minicalendar-datepanel-outside-cell-color: rgba(255, 255, 255, 0.5);
+$ui-light-minicalendar-datepanel-outside-cell-font-weight: 700;
+$ui-light-minicalendar-datepanel-pane-margin: 0px 0px 0px 0px;
+$ui-light-minicalendar-datepanel-selected-cell-background-color: #96A0AE;
+$ui-light-minicalendar-datepanel-selected-cell-font-weight: 700;
+$ui-light-minicalendar-datepanel-special-cell-color: #ffffff;
+$ui-light-minicalendar-datepanel-today-cell-background-color: #2D415A;
+$ui-light-minicalendar-datepanel-today-cell-color: #ffffff;
+$ui-light-minicalendar-datepanel-today-cell-font-weight: 700;
+$ui-light-minicalendar-datepanel-weekend-column-spacing: 0px;
+
+
+
+
 $ui-punchclock-button-button-arrow-icon-color: #FFFFFF;
 $ui-punchclock-button-button-background-color: rgba(0, 0, 0, 0);
 $ui-punchclock-button-button-background-gradient: none;
